Fixed tariff container gap

--- a/src/components/SectionTitle/SectionTitle.module.css
+++ b/src/components/SectionTitle/SectionTitle.module.css
@@ -1,6 +1,6 @@
 .section__title {
     margin: 0;
-    width: 300px;
+    min-width: 300px;
     color: #020202;
     font-family: Oswald;
     font-size: 78px;
