--- a/src/components/Tariffs/Tariffs.module.css
+++ b/src/components/Tariffs/Tariffs.module.css
@@ -1,13 +1,17 @@
 .tariffs__container {
     height: 100vh;
-    display: flex;
     width: 100vw;
+    display: flex;
     overflow-x: hidden;
     align-items: flex-start;
-    gap: 32px;
-    flex-shrink: 0;
+    gap: 62px;
     background-image: url('./tariffs-rect-img.png');
     background-position: 100% 180px;
     background-repeat: no-repeat;
+}
 
+.tariffs__items_container {
+    display: flex;
+    align-items: flex-start;
+    gap: 32px;
 }
